fix login+register
